# aidm

./: .gitignore  .replit  ARCHITECTURE_REVIEW.md  PROJECT_TO_DO_LIST.md  README.md  debug_agent_output.txt  debug_result_object.txt  pyproject.toml  replit.md  requirements.txt  run_server.py
attached_assets/: Pasted-Keep-the-three-top-tabs-as-is-In-Play-Mode-in-the-header-area-where-you-show-Play-Mode-Test-ne-1764535690044_1764535690044.txt  Pasted-merge-scene-patch-base-scene-patch-dict-Check-suitabili_1764713616816.txt
docs/: VOICE_ARCHITECTURE.md
prompts/system/: dm_combat_designer.md  dm_gameplay.md  dm_narrative_long.md  dm_narrative_short.md  dm_new_campaign.md  dm_new_session.md  dm_npc_dialogue.md  dm_original.md  dm_post_session_analysis.md  dm_qa_rules.md  dm_qa_situation.md  dm_router.md  dm_travel.md
scripts/: generate_banner_gradient.py  generate_banner_gradient_readme.md  ingest_world.py  ingest_world_readme.md
src/: characters.py  game_engine.py  main old.py  main.py  pdf_parser.py
src/library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/orchestration/: turn_router.py
src/voice/: __init__.py  config.py  voice_controller.py
static/css/: style.css
static/html/: game.html
static/js/: app.js  voice_client.js
tests/: TESTING.md  test_helpers.py  test_mem_registry.py  test_memory_search.py  test_roll.py
tests/unit/: conftest.py  test_campaigns.py  test_combat_readiness.py  test_config.py  test_dice.py  test_helpers.py  test_memory.py  test_models.py  test_narrative.py  test_orchestration.py  test_response_models.py  test_retry.py  (+2 more)
(+5 files in other folders)
